MISUV-3805 specify background color to fix color contrast issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,10 +54,7 @@ $hmrc-assets-path: "/report-quarterly/income-and-expenses/view/assets/lib/hmrc-f
   width: 68%;
 }
 
-.govuk-summary-list__value {
+.govuk-summary-list__value, .govuk-summary-list__key {
     color: black;
-}
-
-.govuk-summary-list__key {
-    color: black;
+    background-color: white;
 }
